test/types/string/bradc/string2complex/badStringToComplex4.good
badStringToComplex4.chpl:3: error: Illegal character when converting from string to complex(64): 'c'
