test/types/string/bradc/string2complex/badStringToComplex4.chpl
var s = "1.2 c 3.4i";

var c = s:complex(64);
